# yesno-example-for-undergraduates

./: .gitignore  README.md  requirements.txt  train.ipynb
deploy/: CMakeLists.txt  example-app.cc  install_libtorch.sh  yesno.cc  yesno.h
train/: train.ipynb
